# edsh

./: AGENTS.md  Cargo.toml
edsh/: Cargo.toml
edsh-common/: Cargo.toml
edsh-common/src/: lib.rs
edsh-server/: Cargo.toml
edsh-server/src/: main.rs
edsh/src/: main.rs
src/: client.rs  main.rs  protocol.rs  server.rs
