[package]
name = "edsh"
version = "0.2.0"
edition = "2024"

[dependencies]
iroh = "0.95"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
toml = "0.9.10"
dirs = "6.0.0"
